# auto_tester

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
common/: __init__.py  all_api.py  allure_builder.py  api_client.py  api_logs.py  app_api.py  case_reader.py  common_logger.py  config_reader.py  conftest.py  db_client.py  extract_utiles.py  http_client.py  path_manager.py  path_tools.py  prepare_api.py  prepare_logs.py  read_yaml.py  read_yaml_copy.py  run_method.py  runner_utiles.py  yaml_reader.py  yaml_utiles.py
config/: config.yaml  conftest.py  paths.yaml
doc/: test_engineer_guide.md
testCase/: conftest.py  test_api.py  test_select_statistics.py
testCases/: conftest.py  test_api.py  test_demo.py
testData/: api_config.yaml  test_api.yaml
utils/: __init__.py  extract_utils.py  logs_utils.py  replace_utils.py  requests_utils.py  runner_utils.py  yaml_utils.py
